gccida/c1/set_reload_reg
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/set_reload_reg/src/reload1.c:5549:62: error: use of undeclared identifier 'machine_mode'
if ( *( ( _BYTE *)in + 2) && !ix86_hard_regno_mode_ok( v3, ( machine_mode)*( ( unsigned __int8 *)in + 2)) ) 
                                                             ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/set_reload_reg/src/reload1.c:5555:38: error: use of undeclared identifier 'machine_mode'
if ( !ix86_hard_regno_mode_ok( v3, ( machine_mode)*( ( unsigned __int8 *)out + 2)) ) 
                                     ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/set_reload_reg/src/obj/reload1.o] Error 1
